--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
   <!-- Internal Styles library -->
   <link rel="stylesheet" href="./styles.css" crossorigin="anonymous">
 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Do+Hyeon&display=swap" rel="stylesheet">
+
+
   <title>React App</title>
 </head>
 
